--- a/Lucky7/templates/seller/give_review_section.html
+++ b/Lucky7/templates/seller/give_review_section.html
@@ -44,7 +44,7 @@
 
     <!-- Submit Button -->
     <div class="flex justify-end mt-2">
-      <button type="submit" class="bg-gray-500 px-4 py-2 bg-azure text-white rounded-md hover:shadow-sm hover:bg-gray-700">Submit</button>
+      <button type="submit" class="px-4 py-2 bg-azure text-white rounded-md hover:shadow-sm hover:bg-gray-700">Submit</button>
     </div>
   </form>
 </div>
