--- a/Lucky7/templates/seller/reviews_section.html
+++ b/Lucky7/templates/seller/reviews_section.html
@@ -60,7 +60,7 @@
           </svg>
         </div>
         <div>
-          <p class="text-azure font-medium mb-2">{{review.seller_name}}</p>
+          <p class="text-azure font-medium mb-2">{{review.reviewer_name}}</p>
           <div
             class="flex items-center gap-2 text-yellow-300 text-sm mb-2 text-right"
           >
