--- a/Lucky7/static/css/output.css
+++ b/Lucky7/static/css/output.css
@@ -1353,6 +1353,10 @@ input:checked + .toggle-bg{
   margin-inline-end: 0.75rem;
 }
 
+.ml-1{
+  margin-left: 0.25rem;
+}
+
 .ml-4{
   margin-left: 1rem;
 }
@@ -1411,6 +1415,10 @@ input:checked + .toggle-bg{
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.box-border{
+  box-sizing: border-box;
 }
 
 .block{
@@ -1489,8 +1497,17 @@ input:checked + .toggle-bg{
   height: 2.25rem;
 }
 
+.size-full{
+  width: 100%;
+  height: 100%;
+}
+
 .\!h-2\.5{
   height: 0.625rem !important;
+}
+
+.h-12{
+  height: 3rem;
 }
 
 .h-14{
@@ -1577,6 +1594,10 @@ input:checked + .toggle-bg{
   width: 83.333333%;
 }
 
+.w-12{
+  width: 3rem;
+}
+
 .w-28{
   width: 7rem;
 }
@@ -1609,6 +1630,10 @@ input:checked + .toggle-bg{
   width: 2rem;
 }
 
+.w-80{
+  width: 20rem;
+}
+
 .w-\[calc\(100\%-2rem\)\]{
   width: calc(100% - 2rem);
 }
@@ -1629,8 +1654,20 @@ input:checked + .toggle-bg{
   max-width: 100%;
 }
 
+.max-w-lg{
+  max-width: 32rem;
+}
+
+.max-w-md{
+  max-width: 28rem;
+}
+
 .max-w-sm{
   max-width: 24rem;
+}
+
+.max-w-xs{
+  max-width: 20rem;
 }
 
 .flex-1{
@@ -1855,6 +1892,15 @@ input:checked + .toggle-bg{
        column-gap: 1.5rem;
 }
 
+.gap-x-7{
+  -moz-column-gap: 1.75rem;
+       column-gap: 1.75rem;
+}
+
+.gap-y-2{
+  row-gap: 0.5rem;
+}
+
 .space-x-1 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.25rem * var(--tw-space-x-reverse));
@@ -1865,12 +1911,6 @@ input:checked + .toggle-bg{
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]){
@@ -2061,6 +2101,11 @@ input:checked + .toggle-bg{
   border-color: rgb(96 94 93 / var(--tw-border-opacity));
 }
 
+.border-red-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(224 36 36 / var(--tw-border-opacity));
+}
+
 .border-stone-500{
   --tw-border-opacity: 1;
   border-color: rgb(120 113 108 / var(--tw-border-opacity));
@@ -2146,6 +2191,11 @@ input:checked + .toggle-bg{
 
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
+}
+
+.bg-green-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(222 247 236 / var(--tw-bg-opacity));
 }
 
 .bg-red-100{
@@ -2445,6 +2495,10 @@ input:checked + .toggle-bg{
   text-transform: lowercase;
 }
 
+.capitalize{
+  text-transform: capitalize;
+}
+
 .leading-6{
   line-height: 1.5rem;
 }
@@ -2517,6 +2571,11 @@ input:checked + .toggle-bg{
   color: rgb(5 122 85 / var(--tw-text-opacity));
 }
 
+.text-green-700{
+  --tw-text-opacity: 1;
+  color: rgb(4 108 78 / var(--tw-text-opacity));
+}
+
 .text-lava{
   --tw-text-opacity: 1;
   color: rgb(96 94 93 / var(--tw-text-opacity));
@@ -2540,6 +2599,11 @@ input:checked + .toggle-bg{
 .text-red-600{
   --tw-text-opacity: 1;
   color: rgb(224 36 36 / var(--tw-text-opacity));
+}
+
+.text-red-700{
+  --tw-text-opacity: 1;
+  color: rgb(200 30 30 / var(--tw-text-opacity));
 }
 
 .text-red-900{
@@ -2666,6 +2730,10 @@ input:checked + .toggle-bg{
   transition-duration: 150ms;
 }
 
+.duration-200{
+  transition-duration: 200ms;
+}
+
 .duration-500{
   transition-duration: 500ms;
 }
@@ -2742,6 +2810,11 @@ input:checked + .toggle-bg{
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-red-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 36 36 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-red-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(200 30 30 / var(--tw-bg-opacity));
@@ -2790,6 +2863,11 @@ input:checked + .toggle-bg{
 .hover\:text-moon:hover{
   --tw-text-opacity: 1;
   color: rgb(28 25 23 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover{
@@ -2841,6 +2919,11 @@ input:checked + .toggle-bg{
 .focus\:border-stone-900:focus{
   --tw-border-opacity: 1;
   border-color: rgb(28 25 23 / var(--tw-border-opacity));
+}
+
+.focus\:bg-azure:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 99 243 / var(--tw-bg-opacity));
 }
 
 .focus\:bg-gray-100:focus{
@@ -2926,9 +3009,19 @@ input:checked + .toggle-bg{
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
 }
 
+.focus\:ring-gray-300:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
+}
+
 .focus\:ring-lava:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(96 94 93 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-red-300:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(248 180 180 / var(--tw-ring-opacity));
 }
 
 .focus\:ring-stone-500:focus{
@@ -2998,6 +3091,11 @@ input:checked + .toggle-bg{
 .dark\:border-blue-500:is(.dark *){
   --tw-border-opacity: 1;
   border-color: rgb(63 131 248 / var(--tw-border-opacity));
+}
+
+.dark\:border-gray-500:is(.dark *){
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .dark\:border-gray-600:is(.dark *){
@@ -3100,6 +3198,11 @@ input:checked + .toggle-bg{
   color: rgb(63 131 248 / var(--tw-text-opacity));
 }
 
+.dark\:text-gray-200:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
 .dark\:text-gray-300:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
@@ -3152,6 +3255,16 @@ input:checked + .toggle-bg{
 
 .dark\:text-white\/60:is(.dark *){
   color: rgb(255 255 255 / 0.6);
+}
+
+.dark\:placeholder-gray-400:is(.dark *)::-moz-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+
+.dark\:placeholder-gray-400:is(.dark *)::placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
 }
 
 .dark\:placeholder-neutral-500:is(.dark *)::-moz-placeholder{
@@ -3222,6 +3335,11 @@ input:checked + .toggle-bg{
 .dark\:focus\:text-stone-500:focus:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(120 113 108 / var(--tw-text-opacity));
+}
+
+.dark\:focus\:ring-blue-800:focus:is(.dark *){
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(30 66 159 / var(--tw-ring-opacity));
 }
 
 .dark\:focus\:ring-gray-800:focus:is(.dark *){
