--- a/Lucky7/templates/buyer/buyer_home.html
+++ b/Lucky7/templates/buyer/buyer_home.html
@@ -223,6 +223,22 @@
                               <div class="pt-4 md:p-5 text-sm">
                                   <div class="flex justify-between items-center">
                                       <div class="text-lg"> ${ listing.name }</div>
+                                      <span class="flex justify-between items-center gap-2">
+                                      ${listing.views? `<div class="flex items-center gap-1">
+                                          <i class="fas fa-eye text-gray-600"></i>
+                                          <span>${ listing.views }</span>
+                                          </div>`: ''}
+
+
+                                      <button
+                                          type="button"
+                                          id="favourite-button-${ listing.id }"
+                                          class="flex items-center gap-2 p-2 border-2 rounded-xl hover:shadow-md transition-all"
+                                          onclick="toggleFavourite(${ listing.id })">
+                                          ${listing.is_favourite?`<i class="fas fa-heart text-red-500"></i>`:`<i class="far fa-heart text-gray-400"></i>`}
+
+                                      </button>
+                                      </span>
                                   </div>
                                   <div class="mt-2 mb-4">
                                       <div class="mb-2"><span class="text-lava">Mileage:</span> <span class="text-moon">${listing.mileage} km</span></div>
