--- a/Lucky7/templates/partials/listing_card.html
+++ b/Lucky7/templates/partials/listing_card.html
@@ -4,7 +4,34 @@
           <img class="w-full object-cover" style="height: 10rem;" src="{{ listing.image_url }}" referrerpolicy="no-referrer" alt="{{ listing.name }} Image">
       </div>
       <div class="pt-4 md:p-5 text-sm">
+        <div class="flex justify-between items-center">
           <div class="text-lg"> {{ listing.name }}</div>
+          <div class="flex items-center justify-between gap-4">
+          {% if listing.views %}
+                <div class="flex items-center gap-1">
+                    <i class="fas fa-eye text-gray-600"></i> <!-- Eye icon -->
+                    <span>{{ listing.views }}</span> <!-- View count -->
+                </div>
+           {% endif %}
+           {% if listing.favs %}
+                <div class="flex items-center gap-1">
+                    <i class="fas fa-heart text-red-500"></i>
+                    <span>{{ listing.favs }}</span> <!-- View count -->
+                </div>
+            {% endif %}
+            </div>
+        </div>
+          <div>
+            {% if listing.status=='sold' %}
+            <span class="bg-green-400 p-1 px-2 rounded-md">
+            {{ listing.status }}
+            </span>
+            {% else %}
+            <span class="bg-orange-400 p-1 px-2 rounded-md">
+                {{ listing.status }}
+            </span>
+            {% endif %}
+          </div>
           <div class="mt-2 mb-4">
               <div class="mb-2"><span class="text-lava">Mileage:</span> <span class="text-moon">{{ listing.mileage }} km</span></div>
               <div class="mb-2"><span class="text-lava">No. of Owners:</span> <span class="text-moon">{{ listing.previous_owners }}</span></div>
