--- a/Lucky7/templates/usedCarAgent/view_listing.html
+++ b/Lucky7/templates/usedCarAgent/view_listing.html
@@ -82,8 +82,10 @@
           <!-- description grid -->
           <div class="col-span-6">
             <div class="text-3xl font-semibold">{{ listing.name }}</div>
+            {% if listing.status != 'sold' %}
             <div class="flex justify-between items-center my-4">
               <!-- Edit Button -->
+              <div class="flex items-center justify-between gap-2">
               <button
                 type="button"
                 class="flex justify-evenly items-center bg-azure rounded-md px-4 py-2 my-4"
@@ -107,6 +109,21 @@
                 <p class="font-normal text-sm text-milk ps-2">Edit</p>
               </button>
 
+              <!-- Status Button -->
+              <button
+                type="button"
+                class="flex justify-evenly items-center bg-green-500 text-white rounded-md px-4 py-2 hover:bg-green-700"
+                data-modal-target="status-change-modal"
+                data-modal-toggle="status-change-modal"
+              >
+
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>
+
+                <p class="font-normal text-sm ps-2">Mark Sold</p>
+              </button>
+            </div>
               <!-- Delete Button -->
               <button
                 type="button"
@@ -130,7 +147,21 @@
                 </svg>
                 <p class="font-normal text-sm ps-2">Delete</p>
               </button>
-              
+            {% else %}
+            <div class="flex justify-between items-center my-4">
+              <!-- Edit Button -->
+              <div class="flex items-center justify-between gap-2">
+
+              <div class="flex justify-between items-center gap-1 bg-green-400 rounded-md p-2">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+              </svg>
+              <span class="text-lg">{{listing.status}}</span>
+            </div>
+            </div>
+
+            {% endif %}
+
 
 
             </div>
@@ -461,6 +492,67 @@
                 >
                   Cancel
                 </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- status change Modal -->
+      <div
+        id="status-change-modal"
+        tabindex="-1"
+        aria-hidden="true"
+        aria-modal="true"
+        class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
+      >
+        <div class="relative p-4 w-80 max-w-xs max-h-full">
+          <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <div class="flex items-center justify-between p-4 border-b rounded-t dark:border-gray-600">
+              <h3 class="text-xl font-normal text-moon dark:text-white">Mark as Sold</h3>
+              <button
+                type="button"
+                class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white"
+                data-modal-hide="status-change-modal"
+              >
+                <svg
+                  class="w-3 h-3"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 14 14"
+                >
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+                  />
+                </svg>
+                <span class="sr-only">Close modal</span>
+              </button>
+            </div>
+            <div class="p-6 text-center">
+              <div class="flex justify-center gap-4">
+                <form action="{{ url_for('usedCarAgent_app.mark_listing_as_sold', listing_id=listing.id) }}" method="POST">
+                  <div>
+                  <label for="status" class="block mb-2 text-sm font-light text-lava dark:text-white">Please enter the buyer email:</label>
+                  <input
+                    type="text"
+                    name="status"
+                    id="status"
+                    class="bg-gray-50 border px-2 border-gray-300 text-lava text-sm rounded-sm focus:border-lava focus:ring-lava block w-full py-2"
+                    required
+                    value=""/>
+                  </div>
+                  <button
+                    type="submit"
+                    class="text-white bg-green-500 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-sm text-sm px-5 py-2.5 text-center mt-6"
+                  >
+                    Confirm
+                  </button>
+                </form>
               </div>
             </div>
           </div>
