--- a/Lucky7/templates/Login.html
+++ b/Lucky7/templates/Login.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log In Page</title>
-    <link rel="stylesheet" href="./static/css/output.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+    />
   </head>
 
   <body class="h-screen font-sora">
@@ -39,9 +41,12 @@
             <div class=" ">
               <form method="POST" action="/Login">
                 <div class="max-w-sm mx-auto mt-2 px-8">
-
                   {% if message %}
-                  <div class="border border-transparent bg-red-100 mb-5 text-red-900 px-4 py-2 text-center font-semibold text-xs">{{ message }}</div>
+                  <div
+                    class="border border-transparent bg-red-100 mb-5 text-red-900 px-4 py-2 text-center font-semibold text-xs"
+                  >
+                    {{ message }}
+                  </div>
                   {% endif %}
 
                   <!-- email field -->
@@ -172,6 +177,26 @@
                       >Forget Password?</a
                     >
                   </div>
+                  <!-- terms and conditions -->
+                  <div class="mb-3">
+                    <input
+                      required
+                      id="linkCheckBox"
+                      type="checkbox"
+                      value=""
+                      class="size-3 text-stone-600 border-stone-900 rounded-none focus:ring-transparent dark:bg-gray-700 dark:border-gray-600"
+                    />
+                    <label
+                      for="linkCheckBox"
+                      class="ms-2 text-xs text-gray-900 dark:text-gray-300"
+                      >I Agree with the
+                      <a
+                        href="{{ url_for('UserLogin_app.termsNconditions') }}"
+                        class="text-stone-900 font-semibold dark:text-stone-00 text-xs hover:underline"
+                        >terms & conditions</a
+                      >.</label
+                    >
+                  </div>
                   <!-- sign in btn -->
                   <div class="mb-5">
                     <input
@@ -183,8 +208,6 @@
                   </div>
                 </div>
               </form>
-
-              
             </div>
           </div>
         </div>
