--- a/Lucky7/templates/admin/admin_home.html
+++ b/Lucky7/templates/admin/admin_home.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Listings</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+  />
 </head>
 <body class="font-sora bg-dark h-[1000px] text-moon">
     <!-- nav bar -->
