--- a/Lucky7/templates/admin/admin_profile.html
+++ b/Lucky7/templates/admin/admin_profile.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Agent-profile</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+  />
   </head>
   <style>
     ::selection {
