--- a/Lucky7/templates/admin/create_acc.html
+++ b/Lucky7/templates/admin/create_acc.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/output.css') }}"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+  />
   </head>
   <style>
     ::selection {
